--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "connect-mongo",
-  "version": "0.4.0",
-  "description": "MongoDB session store for Connect",
-  "keywords": ["connect", "mongo", "mongodb", "session", "express"],
-  "author": "Casey Banner <kcbanner@gmail.com>",
+  "name": "connect-mongolotion",
+  "version": "0.0.0",
+  "description": "MongoDB session store for Connect (SLIPPERIER NOW)",
+  "keywords": [
+    "connect",
+    "mongo",
+    "mongodb",
+    "session",
+    "express"
+  ],
+  "author": "Conrad Pankoff <deoxxa@fknsrs.biz>",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/kcbanner/connect-mongo.git"
+    "type": "git",
+    "url": "https://github.com/deoxxa/connect-mongolotion.git"
   },
   "bugs": {
-      "url": "https://github.com/kcbanner/connect-mongo/issues"
+    "url": "https://github.com/deoxxa/connect-mongolotion/issues"
   },
   "dependencies": {
-    "mongodb": "1.3.x"
+    "mongoskin": "0.6.1"
   },
-  "directories": {
-      "lib":"./lib"
+  "peerDependencies": {
+    "connect": "^2.0.0"
   },
-  "devDependencies": {
-    "mocha": "1.x",
-    "connect": ">= 1.x",
-    "mongoose": ">= 2.6.x"
-  },
-  "scripts" : { "test": "make test" },
-  "main": "./lib/connect-mongo",
-  "engines": "node >= 0.4.x"
+  "main": "index",
+  "engines": {
+    "node": "~0.10.0"
+  }
 }
